syntax = "proto3";

package rsk;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/warmans/rsk-search/server/gen/api";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://scrimpton.com";
    description: "Oauth endpoints";
  };
  schemes: HTTP;
};
service OauthService {
  rpc GetAuthURL(GetAuthURLRequest) returns (AuthURL) {
    option (google.api.http) = {
      get: "/api/auth/url"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "getAuthUrl",
      summary: "Redirects user to oauth confirmation page"
      tags: "search"
    };
  }
}

message GetAuthURLRequest {
  string provider = 1;
}

message AuthURL {
  string url = 1;
}
